# fanqie_auto_publish

./: .gitignore  .mcp.json  README.md  SKILL.md  batch_publish.py  deai_process.py  fanqie-publish.skill  main_webview.py  mcp_server.py  publish.py  pyproject.toml  rename.py
fanqie-publish/: SKILL.md
fanqie-publish/references/: mcp-usage.md  publish-flow.md
