[project]
name = "fanqie-auto-publish"
version = "1.0.0"
description = "番茄小说自动发布助手 - 全自动爆更工具"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "playwright>=1.45.0",
    "pywebview>=5.0",
    "pillow>=10.0.0",
    "fastmcp>=3.3.1",
]

[dependency-groups]
dev = []

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
